# mstardict

./: Makefile.am  README.transifex  configure.ac
data/: Makefile.am
debian/: changelog  control  rules
po/: LINGUAS  POTFILES.in  ca.po  cs.po  de.po  fi.po  mstardict.pot  ru.po  sk.po  zh_CN.po
src/: Makefile.am  conf.cpp  conf.hpp  dictmngr.cpp  dictmngr.hpp  libwrapper.cpp  libwrapper.hpp  mstardict.cpp  mstardict.hpp  prefsdlg.cpp  transwin.cpp  transwin.hpp  tts.cpp  tts.hpp
src/lib/: stddict.hpp
stardict-plugins/stardict-html-parsedata-plugin/: stardict_html_parsedata.cpp
stardict-plugins/stardict-powerword-parsedata-plugin/: stardict_powerword_parsedata.cpp
stardict-plugins/stardict-wiki-parsedata-plugin/: stardict_wiki2xml.cpp
stardict-plugins/stardict-xdxf-parsedata-plugin/: stardict_xdxf_parsedata.cpp
